@@ -1,3 +1,7 @@
+2013-04-10  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* diff-tests.sh: New script.
+
 2013-03-27  Anton Kolesov <anton.kolesov@synopsys.com>
 
 	* build-uclibc.sh: Ignore error which happens when running 'make
